# python-backend_dio

./: README.md  flaskr.sqlite  pyproject.toml
dio/backend/: connection.py  my_database.sqlite
instance/: blog.sqlite
migrations/versions/: 753b1103e144_initial_migration.py  9901413b0b26_add_active_attr_in_user.py  e4f4e3779bd9_initial_migration.py
src/: app.py  app11.py  db.py  pyproject.toml  schema.sql
src/controllers/: auth.py  role.py  user.py
