[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Larissa Corrêa <larimscorrea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
flask-sqlalchemy = "*"
flask-jwt-extended = "*"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
